# lighter-auth

./: .dockerignore  .env  .env.example  .gitignore  CACHE.md  CACHE_TESTS_SUMMARY.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  GRACEFUL_SHUTDOWN_IMPLEMENTATION.md  README.md  SHUTDOWN_QUICK_REFERENCE.md  databases.sh  docker-compose.yml  entrypoint.sh  test_shutdown.sh
.github/workflows/: ci.yml  docker-image.yml  rust.yml
config/: .gitignore  default.toml  development.toml  production.toml
docker/grafana/dashboards/: 01-service-overview.json  02-http-metrics.json  03-database-performance.json  04-cache-performance.json  05-auth-authorization.json  06-system-resources.json  07-business-metrics.json
docker/grafana/provisioning/dashboards/: default.yml
docker/grafana/provisioning/datasources/: prometheus.yml
docker/postgres/init/: 01-extensions.sql
docker/prometheus/: prometheus.yml
examples/: cache_usage.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_extensions.rs  m20230902_024725_create_users.rs  m20230902_024725_v1_create_users.rs  m20230902_024928_v1_create_permissions.rs  m20230902_025106_v1_create_roles.rs  m20230902_025217_v1_create_permission_user.rs  m20230902_025247_v1_create_permission_role.rs  m20230902_025255_v1_create_role_user.rs  m20230902_025309_v1_create_tokens.rs  m20231216_092530_v1_user_initial_seeder.rs  main.rs
src/: api.rs  helpers.rs  lib.rs  main.rs  router.rs
src/cache/: hybrid.rs  local.rs  mod.rs  null.rs  redis.rs
src/config/: app.rs  auth.rs  mod.rs  resilience.rs  security.rs
src/controllers/: health.rs  metrics.rs  mod.rs
src/controllers/v1/: auth.rs  permission.rs  role.rs  user.rs
src/database/: mod.rs  pool.rs
src/entities/v1/: mod.rs  permission_role.rs  permission_user.rs  permissions.rs  prelude.rs  role_user.rs  roles.rs  tokens.rs  users.rs
src/metrics/: middleware.rs  mod.rs
src/middlewares/v1/auth/: auth.rs  authenticated.rs  internal.rs  mod.rs
src/models/v1/: mod.rs
src/models/v1/permission/: mod.rs
src/models/v1/role/: mod.rs
src/models/v1/token/: mod.rs
src/models/v1/user/: mod.rs
src/requests/v1/auth/: mod.rs
src/requests/v1/permission/: mod.rs
src/requests/v1/role/: mod.rs
src/requests/v1/user/: mod.rs
src/resilience/: circuit_breaker.rs  mod.rs
src/responses/v1/auth/: mod.rs
src/responses/v1/permission/: mod.rs
src/responses/v1/role/: mod.rs
src/responses/v1/user/: complete.rs  mod.rs  simple.rs
src/security/: headers.rs  mod.rs  password.rs  rate_limit.rs  validation.rs
src/services/v1/auth/: authenticated.rs  login.rs  logout.rs  mod.rs
src/services/v1/permission/: delete.rs  mod.rs  paginate.rs  show.rs  store.rs  update.rs
src/services/v1/role/: delete.rs  paginate.rs  show.rs  store.rs  update.rs
src/services/v1/user/: delete.rs  mod.rs  paginate.rs  show.rs  store.rs  update_general_information.rs  update_password.rs
src/testing/: instance.rs  mod.rs  setup.rs
src/testing/user/: mod.rs  pagination.rs  show.rs  store.rs  update_general_information.rs  update_password.rs
tests/: integration_tests.rs  security_tests.rs  unit_tests.rs
tests/integration/: auth_cache_test.rs  auth_flow.rs  health_test.rs  mod.rs  permissions_test.rs  security_headers_test.rs
tests/load/: EXAMPLE_OUTPUT.md  README.md  TEST_GUIDE.md  k6_script.js  quick-test.js  run-all-tests.sh  soak-test.js  spike-test.js  stress-test.js
tests/security/: README.md  mod.rs  sql_injection_test.rs  xss_test.rs
tests/unit/: cache_test.rs  config_test.rs  mod.rs
