[package]
name = "lighter-auth"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[workspace]
resolver = "3"
members = ["migration"]

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.

[features]
default = []
postgres = [
  "lighter-common/postgres",
  "lighter-auth-migration/postgres",
  "sea-orm/sqlx-postgres",
]
sqlite = [
  "lighter-common/sqlite",
  "lighter-auth-migration/sqlite",
  "sea-orm/sqlx-sqlite",
]

[dependencies]
lighter-common = { workspace = true }
lighter-auth-migration = { workspace = true }

actix = { workspace = true }
actix-cors = { workspace = true }
actix-web = { workspace = true }
awc = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

[workspace.dependencies]
lighter-auth-migration = { path = "migration" }
# lighter-common = { git = "https://github.com/Geriano/lighter-common" }
lighter-common = { path = "../common" }

actix = "0.13.5"
actix-cors = "0.7.1"
actix-web = { version = "4.12.1", features = ["rustls-0_23"] }
awc = "3.8.1"
sea-orm = { version = "1.1.19", features = ["runtime-tokio-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
