[package]
name = "lighter-auth-migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[features]
default = ["postgres"]
sqlite = ["lighter-common/sqlite"]
postgres = ["lighter-common/postgres"]

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
lighter-common = { workspace = true }
sea-orm-migration = { version = "0.12.12", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite"] }
