[package]
name = "lighter-auth-migration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
sqlite = ["lighter-common/sqlite"]
postgres = ["lighter-common/postgres"]

[dependencies]
lighter-common = { workspace = true }
sea-orm-migration = { version = "1.1.19", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "sqlx-sqlite",
] }
tokio = { version = "1.48.0", features = ["full"] }
